# arcana.elfscan

./: .gitignore  CMakeLists.txt  MIT-LICENSE.txt  README.md  install.sh
default_config/: arcana.conf
include/: arcana.h  misc.h  plugin.h
infected_bins/: infected_DT_DEBUG  ip  jp-retal-e  kill_no_plt_cxa_textpadd  kill_plt_cxa_textpadd  ldd_inter  ldd_post  ldd_pre  lpv_infected_32bit_et_exec  mybash  reloc_ctors_infection64  skeksi.host
plugins/: Makefile  extended_section.c  golang.c
src/: config.c  container.c  heuristics.c  heuristics_l2.c  heuristics_util.c  internal.c  main.c  obj.c  so.c  util.c
tools/: stripx
